# python-domino

./: .flake8  .ghc.environment.aarch64-darwin-9.12.2  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Debugging  Makefile  README.adoc  README.md  README.txt  ]  build_docs.sh  domino.aisystems.md.adoc  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini  transform_aisystems_to_adoc.sh  transform_aisystems_to_md.sh  version.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  python-app.yml
docs/: build.sh  delink.hs  html_to_md.sh  md_to_adoc.sh  transform_agents_docs_for_readme.sh  transform_aisystems_docs_for_readme.sh  transform_aisystems_to_adoc.sh  transform_aisystems_to_md.sh
docs/source/: conf.py  index.rst
domino/: __init__.py  _custom_metrics.py  _version.py  authentication.py  constants.py  data_sources.py  datasets.py  domino.py  domino.py1  domino_enums.py  exceptions.py  helpers.py  http_request_manager.py  routes.py  training_sets.py
examples/: create_dataset.py  create_models_example.py  create_project_with_collaborators.py  example_airflow_dag.py  example_budget_manager.py  example_dataset.py  example_projects_usage.py  export_model_to_sagemaker.py  export_runs.py  get_datasets.py  mlflow_trace_tagging_demo.py  models_and_environments.py  publish_api_endpoint.py  start_run_and_check_status.py  unpublish_api_endpoints.py  upload_and_run_file_and_download_results.py  upload_file.py
python_domino.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: check_snake_case.py
source/: conf.py  index.rst
tests/: conftest.py  test_app.py  test_apps.py  test_basic_auth.py  test_collaborators.py  test_custom_metrics.py  test_data_sources.py  test_data_sources_nods.py  test_datasets.py  test_deprecations.py  test_domino.py  test_endpoints.py  test_environments.py  test_files.py  test_finops.py  test_flyte_job.py  test_hardware_tiers.py  test_helpers.py  test_jobs.py  test_models.py  test_no_data_sources.py  test_operator.py  test_project_id.py  test_projects.py  test_scheduled_jobs.py  test_spark_operator.py
(+220 files in other folders)
