[project]
name = "dominodatalab"
dynamic = ["version"]
description = "Python bindings for the Domino API"
readme = "README.md"
requires-python = ">=3.10.0"
keywords = ["Domino Data Lab", "API"]
license = "Apache-2.0"
authors = [{ name = "Domino Data Lab", email = "support@dominodatalab.com" }]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "packaging==23.2",
  "requests>=2.4.2",
  "beautifulsoup4~=4.11",
  "polling2~=0.5.0",
  "urllib3>=1.26.19,<3",
  "typing-extensions~=4.13.0",
  "frozendict~=2.3",
  "python-dateutil~=2.8.2",
  "retry==0.9.2",
]

[project.optional-dependencies]
airflow = ["apache-airflow==2.2.4"]
data = ["dominodatalab-data>=0.1.0"]
agents = [
  "semver>=3.0.4",
  "pandas>=2.3.1",
  "numpy>=2.0.2",
  "mlflow-skinny>=3.2.0,<3.3.0",
  "mlflow-tracing>=3.2.0,<3.3.0",
]
dev = [
  "pytest-order>=1.3.0",
  "pytest-asyncio>=0.23.8",
  "scikit-learn>=1.6.1",
  "openai>=2.7.2",
  "ai-mock>=0.3.1",
  "black==22.3.0",
  "flake8==4.0.1",
  "Jinja2==2.11.3",
  "nbconvert==6.3.0",
  "packaging==23.2",
  "polling2==0.5.0",
  "pre-commit==2.19.0",
  "pyspark==3.3.0",
  "pytest==7.4.3",
  "requests_mock==1.9.3",
  "tox==3.25.1",
  "frozendict==2.4.6",
  "docker>=7.1.0",
  "pytest-mock>=3.14.1",
]
docs = [
  "sphinx>=7.4.0",
  "markupsafe==2.0.1"
]

[project.urls]
Repository = "https://github.com/dominodatalab/python-domino"
Documentation = "https://docs.dominodatalab.com/en/latest/api_guide/c5ef26/the-python-domino-library/"
Changelog = "https://github.com/dominodatalab/python-domino/blob/master/CHANGELOG.md"
Releases = "https://github.com/dominodatalab/python-domino/releases"

[build-system]
requires = ["setuptools>=70.0.0,<81"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["domino", "domino.*"]

[tool.setuptools.dynamic]
version = {attr = "domino._version.__version__"}
